refactor: Melhorando clean architeture, corrigindo testes